test/tests/compiler/14_pointers/invalid_types/assign_wrong_pointer_type.plx
pub fn main(none) i32 {
    d: *f64 = 0
    l: *i64 = 0
    #  It's illegal to assign one pointer type to another 
    l = d
    return nil
}
